# Raptor-Language

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md  code_examples.md  conanfile.txt  example.rp  grammar.txt  setup.sh
src/: CMakeLists.txt  errors.cpp  errors.hpp  lexer.cpp  lexer.hpp  main.cpp  position.hpp  source.hpp  token.cpp  token.hpp  types.hpp
src/compiler/: CMakeLists.txt  ExprIRGenerator.cpp  ExprIRGenerator.hpp  IRGenerator.cpp  IRGenerator.hpp  compiler.cpp  expr_ir_generator.cpp  expr_ir_generator.hpp  ir_generator.cpp  ir_generator.hpp  main.cpp  print.cpp  print.hpp  scope.hpp
src/errors/: CMakeLists.txt  base_errors.hpp  base_exception.cpp  errors.cpp  interpreter_errors.hpp  lexer_errors.hpp  parser_errors.hpp  semantic_errors.cpp  semantic_errors.hpp
src/interpreter/: CMakeLists.txt  call_context.cpp  call_context.hpp  expr_interpreter.cpp  expr_interpreter.hpp  interpreter.cpp  interpreter.hpp  interpreter_errors.cpp  interpreter_errors.hpp  main.cpp  scope.cpp  scope.hpp  value_obj.cpp  value_obj.hpp
src/lexer/: CMakeLists.txt  ILexer.hpp  errors.cpp  errors.hpp  filter.hpp  i_lexer.hpp  lexer.cpp  lexer.hpp  lexer_errors.cpp  lexer_errors.hpp  position.hpp  source.hpp  token.cpp  token.hpp  types.hpp
src/parse_tree/: CMakeLists.txt  expressions.cpp  expressions.hpp  parse_tree.hpp  printer.cpp  printer.hpp  statements.cpp  statements.hpp  visitor.hpp
src/parser/: CMakeLists.txt  expressions.cpp  expressions.hpp  parse_tree.hpp  parser.cpp  parser.hpp  parser.tpp  parser_errors.hpp  printer.cpp  printer.hpp  program.hpp  statements.cpp  statements.hpp
src/utils/: CMakeLists.txt  overloaded.tpp  position.hpp  types.cpp  types.hpp
tests/: CMakeLists.txt  acceptance_tests.cpp  fixtures.hpp  parser_test.hpp  test.cpp  test_IRGenerator.cpp  test_expr_parsing.cpp  test_filter.cpp  test_interpreter.cpp  test_ir_generator.cpp  test_lexer.cpp  test_parser.cpp  test_source.cpp  test_stmt_parsing.cpp
